# agrr.core

./: .gitignore  ARCHITECTURE.md  DAEMON_USAGE.md  DISTRIBUTION.md  Dockerfile  OBJECTIVE_FUNCTION_NECESSITY_ANALYSIS.md  OBJECTIVE_FUNCTION_UNIFICATION_PROPOSAL.md  OPTIMIZATION_OBJECTIVE_VERIFICATION_REPORT.md  README.md  REDUNDANT_TESTS_ANALYSIS.md  SIMPLIFIED_OBJECTIVE_FUNCTION_SOLUTION.md  adjustment_result.json  agricultural_tasks_test.json  agrr.spec  allocation_result.json  allocation_simple.json  build_binary.py  build_standalone.sh  candidates.json  candidates.txt  candidates_final.txt  candidates_output2.txt  candidates_output3.txt  candidates_output4.txt  candidates_output5.txt  candidates_output6.txt  candidates_output8.txt  candidates_simple.json  candidates_simple.txt  crops.json  crops_multi.json  current_allocation.json  field_01.json  fields.json  fields_multi.json  historical.json  lettuce_profile.json  moves.json  moves_valid.json  output.json  (+27 more)
config/: agrr.spec  agrr_config.yaml
docs/: 2D_GRID_VISUALIZATION.md  ADAPTER_ARCHITECTURE_VIOLATIONS.md  ALGORITHM_IMPROVEMENTS_IMPLEMENTATION_PLAN.md  ALGORITHM_RESEARCH_SUMMARY.md  ALGORITHM_REVIEW_EXECUTIVE_SUMMARY.md  ALLOCATION_ADJUST_FINAL_REPORT.md  ALLOCATION_ADJUST_OPTIMIZATION.md  ALLOCATION_ADJUST_PHASE2_COMPLETE.md  ALLOCATION_ADJUST_TEST_REPORT.md  ARCHITECTURE_MD_REVIEW.md  ARCHITECTURE_OVERVIEW_AND_RECOMMENDATIONS.md  AREA_RATIO_OPTIMIZATION.md  CANDIDATE_SUGGESTION_FEATURE.md  CANDIDATE_SUGGESTION_TEST_DESIGN.md  CANDIDATE_SUGGESTION_USER_GUIDE.md  CLEAN_ARCHITECTURE_GATEWAY_GUIDELINES.md  CLI_DATA_FLOW.md  CLI_DATA_FLOW_JMA.md  CLI_DATA_TRANSFER_REPORT.md  CLI_DATA_TRANSFER_TEST_FINAL_REPORT.md  CLI_EXECUTION_TEST_REPORT.md  CLI_FALLOW_PERIOD_TEST.md  CLI_HELP_TEST_CASES.md  (+79 more)
(+758 files in other folders)
